<resources>
    <string name="app_name">Click Master</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_first_fragment">Addition</string>
    <string name="hello_second_fragment">Subtraction</string>
    <string name="hello_third_fragment">Multiplication</string>
    <string name="hello_fourth_fragment">Division</string>
    <string name="current_score">Current Score: --</string>
    <string name="modifyer">Modifyer: --</string>
    <string name="subtract">Subtract</string>
    <string name="subtraction">Subtraction</string>
    <string name="textview">TextView</string>
    <string name="add">Add</string>
    <string name="addition">Addition</string>
    <string name="value">Value: --</string>
    <string name="multiplication">Multiplication</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
</resources>
