<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/addition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHead"
        android:textSize="36sp" />

    <TextView
        android:text="@string/value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewValue" />

    <TextView
        android:text="@string/modifyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewModifyer" />

    <Button
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAdd" />

    <TextView
        android:text="@string/current_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCurrentScore" />

</LinearLayout>